# FastMessage

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-all.txt  requirements.txt  tox.ini
.github/workflows/: deploy.yml  tests.yml
docs/: SUMMARY.md  gen_ref_pages.py  index.md
fastmessage/: __init__.py  callable_wrapper.py  common.py  exceptions.py  fastmessage_handler.py  method_validator.py
tests/: async_test.py  common.py  fastmessage_handler_test.py  handler_test.py  method_validation_test.py
